syntax="proto3";
package usercenter;
option go_package = "./;usercenter";

import "common.proto";
import "menu.proto";

service Role{
    rpc Add(RoleInfo)returns(CommonResponse){}
    rpc Update(RoleInfo)returns(CommonResponse){}
    rpc Delete(DelRequest)returns(CommonResponse){}
    rpc Query(QueryRoleRequest)returns(QueryRoleResponse){}
    rpc GetAll(GetAllRequest)returns(GetAllRoleResponse){}
    rpc GetDetail(GetDetailRequest)returns(GetRoleDetailResponse){}
}

message RoleInfo{
    string id=1;
    string tenantID=2;
    string name=3;
    string parentID=4;
    repeated RoleInfo children=5;
    repeated RoleMenu roleMenus=6;
    string defaultRouter=7;
    string description=8;
    bool canDel=9;
}

message RoleMenu{
    string id=1;
    string roleID=2;
    string menuID=3;
    string funcs=4;
    MenuInfo menu=5;
}

message QueryRoleRequest{
    int64 pageIndex=1;
    int64 pageSize=2;
    string orderField=3;
    bool desc=4;
    string name=5;
}

message QueryRoleResponse{
    Code code=1;
    string message=2;
    repeated RoleInfo data=3;
    int64 pages=4;
    int64 records=5;
    int64 total=6;
}

message GetAllRoleResponse{
    Code code=1;
    string message=2;
    repeated RoleInfo data=3;
}

message GetRoleDetailResponse{
    Code code=1;
    string message=2;
    RoleInfo data=3;
}